# University_SQLITE

./: pyproject.toml
university_sqlite/: create_db.py  fill_fake_data.py
university_sqlite/DB/: University_Tables.sql  university.db
university_sqlite/queries/: query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
