[tool.poetry]
name = "university-sqlite"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
readme = "README.md"
packages = [{include = "university_sqlite"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^18.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
